--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-timm==0.3.4
+git+https://github.com/rwightman/pytorch-image-models.git@48371a33b11fc30ca23ed8988619af08902b215b
 pytorch-argus==0.2.0
 segmentation-models-pytorch==0.1.3
 pretrainedmodels==0.7.4
